--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -113,10 +113,10 @@
                 
                 <form >
                   <div class="row">
-                    <div class="col-md-10 offset-md-1">
+                    <div class="col-md-12 offset-md-1">
                       <div class="row">
   
-                        <div class="col-3">
+                        <div class="col-10">
                            <div class="form-group">
                            
                             <select class="form-control form-control-lg" style="width: 100%;" id="countries">
@@ -125,19 +125,7 @@
                             </select>
                           </div>
                         </div>
-                        <div class="col-7">
-                          <div class="form-group">
-                            <div class="input-group input-group-lg">
-                              <input type="text" class="form-control form-control-lg" id="query"
-                                placeholder="Type your domain here" value="">
-                              <div class="input-group-append">
-                                <button type="button" class="btn btn-lg btn-default" id="search">
-                                  <i class="fa fa-search"></i>
-                                </button>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+ 
                       </div>
   
                     </div>
@@ -173,13 +161,43 @@
           <!-- /.card-body -->
         </div>
   
-
+        <div class="card">
+          <div class="card-header">
+              <h3 class="card-title">My Playlist</h3>
+          </div>
+          <div class="card-body">
+              <table id="new-list" class="table table-bordered table-striped">
+                  <thead>
+                      <tr>
+                          <th>Title</th>
+                          <th>URL</th>
+                          <th>Ovol</th>
+                          <th>Controls</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+      
+                  </tbody>
+                  <tfoot>
+                      <tr>
+                          <th>Title</th>
+                          <th>URL</th>
+                          <th>Ovol</th>
+                          <th>Controls</th>
+                      </tr>
+                  </tfoot>
+              </table>
+          </div>
+      </div>
+    
 
 
       </div><!-- /.container-fluid -->
+
+
+      
     </section>
     <!-- /.content -->
-
 
       </div><!-- /.container-fluid -->
     </section>
