Added playlist table and add/remove options

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -142,7 +142,7 @@
                   <th>country</th>
                   <th>Title</th>
                   <th>URL</th>
-                  <th>Controls</th>
+                  <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                 </tr>
               </thead>
               <tbody>
@@ -153,7 +153,7 @@
                   <th>country</th>
                   <th>Title</th>
                   <th>URL</th>
-                  <th>Controls</th>
+                  <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                 </tr>
               </tfoot>
             </table>
@@ -172,7 +172,7 @@
                           <th>Title</th>
                           <th>URL</th>
                           <th>Ovol</th>
-                          <th>Controls</th>
+                          <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                       </tr>
                   </thead>
                   <tbody>
@@ -183,7 +183,7 @@
                           <th>Title</th>
                           <th>URL</th>
                           <th>Ovol</th>
-                          <th>Controls</th>
+                          <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                       </tr>
                   </tfoot>
               </table>
