--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -164,6 +164,10 @@
         <div class="card">
           <div class="card-header">
               <h3 class="card-title">My Playlist</h3>
+              <div class="card-tools" style="float: right;">
+                <button id="clear-list" class="btn btn-danger btn-sm">Clear List</button>
+                <button id="export-list" class="btn btn-success btn-sm">Export List</button>
+            </div>
           </div>
           <div class="card-body">
               <table id="new-list" class="table table-bordered table-striped">
