--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
 
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-LK5/59D6F4b6jlW9JvGOJ3+DjqHRtL6Q0jp0+0p8HC+I+Zvx2K9LjM5fJw1M2d6C" crossorigin="anonymous">
 
 </head>
@@ -244,6 +244,7 @@
 <script src="plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <!-- <script src="dist/js/pages/dashboard.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 
 <script src="dist/js/main.js"></script>
 </body>
