--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>YoRadio stations list creator</title>
+  <meta property="og:title" content="YoRadio stations list creator" />
+  <meta property="og:description" content="Easely create stations playlist. select from 38,116 stations from 228 countries." />
+  <meta property="og:image" content="https://yoradio.licar.biz/dist/img/yoradio.png" />
   <style>
     .flag {
       width: 25px;
