Add og:image tags

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,11 @@
   <meta property="og:title" content="YoRadio stations list creator" />
   <meta property="og:description" content="Easely create stations playlist. select from 38,116 stations from 228 countries." />
   <meta property="og:image" content="https://yoradio.licar.biz/dist/img/yoradio.png" />
+  <meta property="og:image:width" content="1408" />
+  <meta property="og:image:height" content="881" />
+
+
+  
   <style>
     .flag {
       width: 25px;
