--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,29 +2,26 @@
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3SRVTCTFQM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3SRVTCTFQM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-3SRVTCTFQM');
-</script>
+    gtag('config', 'G-3SRVTCTFQM');
+  </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>YoRadio stations list creator</title>
   <meta property="og:title" content="YoRadio stations list creator" />
-  <meta property="og:description" content="Easely create stations playlist. select from 38,116 stations from 228 countries." />
+  <meta property="og:description" content="Easily create stations playlist. Select from 38,116 stations from 228 countries." />
   <meta property="og:image" content="https://yoradio.licar.biz/dist/img/yoradio.png" />
   <meta property="og:image:width" content="1408" />
   <meta property="og:image:height" content="881" />
 
-
-  
   <style>
     .flag {
       width: 25px;
-
       display: inline-block;
       overflow: hidden;
       position: relative;
@@ -42,189 +39,146 @@
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
   <!-- Theme style -->
   <link rel="stylesheet" href="dist/css/adminlte.min.css">
-
+  <!-- DataTables -->
+  <link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
+  <link rel="stylesheet" href="plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
+  <link rel="stylesheet" href="plugins/datatables-rowreorder/css/rowReorder.dataTables.min.css">
+  <!-- SweetAlert2 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+  <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-LK5/59D6F4b6jlW9JvGOJ3+DjqHRtL6Q0jp0+0p8HC+I+Zvx2K9LjM5fJw1M2d6C" crossorigin="anonymous">
-
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
-
-  <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
     <img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
   </div>
 
-  
-
-  <!-- Main Sidebar Container -->
-
-
-  <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
     <div class="content-header">
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-12">
             <h1 class="m-2" style="text-align:center">YoRadio stations list creator</h1>
-          </div><!-- /.col -->
+          </div>
           <div class="col-sm-6">
-
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
+          </div>
+        </div>
+      </div>
     </div>
-    <!-- /.content-header -->
-
-    <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
-        <!-- Small boxes (Stat box) -->
         <div class="row">
           <div class="col-lg-6 col-9">
-            <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3><span  id="countries-count">0</span></h3>
-
+                <h3><span id="countries-count">0</span></h3>
                 <p>Countries</p>
               </div>
               <div class="icon">
-                
               </div>
-              
             </div>
           </div>
-          <!-- ./col -->
           <div class="col-lg-6 col-9">
-            <!-- small box -->
             <div class="small-box bg-success">
               <div class="inner">
                 <h3 id="stations-count">0<sup style="font-size: 20px"></sup></h3>
-
                 <p>Stations</p>
               </div>
               <div class="icon">
-                
               </div>
-              
             </div>
           </div>
-
         </div>
-        <!-- /.row -->
 
-    <!-- Main content -->
-    <section class="content">
-      <div class="container-fluid">
-        <!-- Small boxes (Stat box) -->
-                  
-        <div class="card">
-          <div class="card-header">
-            <section class="content">
-              <div class="container-fluid">
-                
-                <form >
-                  <div class="row">
-                    <div class="col-md-12 offset-md-1">
+        <section class="content">
+          <div class="container-fluid">
+            <div class="card">
+              <div class="card-header">
+                <section class="content">
+                  <div class="container-fluid">
+                    <form>
                       <div class="row">
-  
-                        <div class="col-10">
-                           <div class="form-group">
-                           
-                            <select class="form-control form-control-lg" style="width: 100%;" id="countries">
-                              <option value="0">- Select Country -</option>
-  
-                            </select>
+                        <div class="col-md-12 offset-md-1">
+                          <div class="row">
+                            <div class="col-10">
+                              <div class="form-group">
+                                <select class="form-control form-control-lg" style="width: 100%;" id="countries">
+                                  <option value="0">- Select Country -</option>
+                                </select>
+                              </div>
+                            </div>
                           </div>
                         </div>
- 
                       </div>
-  
-                    </div>
+                    </form>
                   </div>
-                </form>
+                </section>
               </div>
-            </section>
-          </div>
-          <!-- /.card-header -->
-          <div class="card-body">
-            <table id="stations-by-countries" class="table table-bordered table-striped">
-              <thead>
-                <tr>
-                  <th>country</th>
-                  <th>Title</th>
-                  <th>URL</th>
-                  <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-                </tr>
-              </thead>
-              <tbody>
-  
-              </tbody>
-              <tfoot>
-                <tr>
-                  <th>country</th>
-                  <th>Title</th>
-                  <th>URL</th>
-                  <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
-          <!-- /.card-body -->
-        </div>
-  
-        <div class="card">
-          <div class="card-header">
-              <h3 class="card-title">My Playlist</h3>
-              <div class="card-tools" style="float: right;">
-                <button id="clear-list" class="btn btn-danger btn-sm">Clear List</button>
-                <button id="export-list" class="btn btn-success btn-sm">Export List</button>
-            </div>
-          </div>
-          <div class="card-body">
-              <table id="new-list" class="table table-bordered table-striped">
+              <div class="card-body">
+                <table id="stations-by-countries" class="table table-bordered table-striped">
                   <thead>
-                      <tr>
-                          <th>Title</th>
-                          <th>URL</th>
-                          <th>Ovol</th>
-                          <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-                      </tr>
+                    <tr>
+                      <th>Country</th>
+                      <th>Title</th>
+                      <th>URL</th>
+                      <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    </tr>
                   </thead>
                   <tbody>
-      
                   </tbody>
                   <tfoot>
-                      <tr>
-                          <th>Title</th>
-                          <th>URL</th>
-                          <th>Ovol</th>
-                          <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-                      </tr>
+                    <tr>
+                      <th>Country</th>
+                      <th>Title</th>
+                      <th>URL</th>
+                      <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    </tr>
                   </tfoot>
-              </table>
+                </table>
+              </div>
+            </div>
+            
+            <div class="card">
+              <div class="card-header">
+                <h3 class="card-title">My Playlist</h3>
+                <div class="float-right">
+                  <button id="clear-list" class="btn btn-danger btn-sm">Clear List</button>
+                  <button id="export-list" class="btn btn-primary btn-sm">Export List</button>
+                  <button id="import-list" class="btn btn-primary btn-sm">Import List</button>
+                  <input type="file" id="import-file" style="display: none;">
+                </div>
+              </div>
+              <div class="card-body">
+                <table id="new-list" class="table table-bordered table-striped">
+                  <thead>
+                    <tr>
+                      <th>Title</th>
+                      <th>URL</th>
+                      <th>Ovol</th>
+                      <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <th>Title</th>
+                      <th>URL</th>
+                      <th>Ovol</th>
+                      <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div>
+            </div>
           </div>
+        </section>
       </div>
-    
-
-
-      </div><!-- /.container-fluid -->
-
-
-      
     </section>
-    <!-- /.content -->
-
-      </div><!-- /.container-fluid -->
-    </section>
-    <!-- /.content -->
   </div>
-  <!-- /.content-wrapper -->
   <footer class="main-footer">
     <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
     All rights reserved.
@@ -233,13 +187,9 @@
     </div>
   </footer>
 
-  <!-- Control Sidebar -->
   <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
   </aside>
-  <!-- /.control-sidebar -->
 </div>
-<!-- ./wrapper -->
 
 <!-- jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script>
@@ -251,18 +201,17 @@
 </script>
 <!-- Bootstrap 4 -->
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- jQuery Knob Chart -->
-<script src="plugins/jquery-knob/jquery.knob.min.js"></script>
-
-<!-- AdminLTE App -->
-<script src="dist/js/adminlte.js"></script>
+<!-- DataTables & Plugins -->
 <script src="plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<!-- <script src="dist/js/pages/dashboard.js"></script> -->
+<script src="plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<script src="plugins/datatables-rowreorder/js/dataTables.rowReorder.min.js"></script>
+<!-- AdminLTE App -->
+<script src="dist/js/adminlte.js"></script>
+<!-- SweetAlert2 -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
-
+<!-- Main JS -->
 <script src="dist/js/main.js"></script>
 </body>
 </html>
